fix: card alignment

--- a/src/components/Card1/Card1.css
+++ b/src/components/Card1/Card1.css
@@ -1,34 +1,55 @@
-.Right-Card{
+.Right-Card {
   display: flex;
   justify-content: space-between;
   margin-top: 18%;
 }
-
-.bingo1{
-  position :relative;
-  z-index: -1;
-  right: 30%;
-}
-
-.productinfo{
+.Right-Card .product-img {
+  padding: 10px 0 10px 18px;
+  margin-top: 42px;
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-self: center;
-  position:relative;
-  width:200px;
-  right: 80%;
-
+}
+.Right-Card .product-img .button-card {
+  display: flex;
+  align-self: flex-end;
+  /* background: #7b3c93; */
+  width: 184px;
+  height: 47px;
+}
+.Right-Card .product-img img {
+  width: 90%;
 }
 
-.productinfo h2{
+.Right-Card .product-info {
+  position: relative;
+  padding-right: 13px;
+}
+.Right-Card .product-info .bingo-box img {
+  position: absolute;
+  top: 5%;
+  left: -70%;
+  width: 170%;
+  z-index: -1;
+}
+.Right-Card .product-info-content {
+  margin-top: 50px;
+}
+.Right-Card .product-info-content h3 {
+  font-size: 1.4rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.Right-Card .product-info-content h3 span {
   color: #7b3c93;
 }
-
-.productinfo h4{
-  margin-top: -10px;
-}
-
-.poster1{
-  width: 160px;
-  margin-left: 15px;
+.Right-Card .product-info-content p {
+  margin-top: 30px;
+  font-family: "Urbanist";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 32px;
+  letter-spacing: 0.2px;
+  color: #000000;
+  padding: 20px 20px 20px 0px;
 }
